--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
+
+## Update composer and run the appropriate composer command
+before_script:
+ github_token: $GH_TOKEN
+ 
 language: java
 sudo: false
 
@@ -6,14 +11,7 @@ cache:
   - "$HOME/.m2"
 services:
   - xvfb
-## Update composer and run the appropriate composer command
-before_script:
-  - composer self-update -q
-  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
-  - if [ -z "$dependencies" ]; then composer install; fi;
-  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
-  - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
-  - composer show -i
+
 
 notifications:
   email:
