--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-
 ## Update composer and run the appropriate composer command
 before_script:
- github_token: $GH_TOKEN
+  - composer self-update -q
+  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
+  - if [ -z "$dependencies" ]; then composer install; fi;
+  - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
+  - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
+  - composer show -i
  
 language: java
 sudo: false
