--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ## Update composer and run the appropriate composer command
 before_script:
   - composer self-update -q
-  - if [ -n "$GH_TOKEN" ]; then composer config github-oauth.github.com ${GH_TOKEN}; fi;
+  - if [ -n "$GH_TOKEN" ]; then composer config https://github.com/Priyanka-IN/hostelworldqa ${GH_TOKEN}; fi;
   - if [ -z "$dependencies" ]; then composer install; fi;
   - if [ "$dependencies" = "lowest" ]; then composer update --prefer-lowest -n; fi;
   - if [ "$dependencies" = "highest" ]; then composer update -n; fi;
